<resources>
    <string name="app_name">Magikarp</string>

    <string name="title_activity">Magikarp Demo</string>
    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="magikarp_image_attribution">Magikarp icon from: https://github.com/PokeAPI/sprites</string>
    <string name="demo_action_splash_animated">Magikarp (Animated)</string>
    <string name="demo_action_splash">Magikarp</string>
    <string name="demo_action_basic_splash">Background splash</string>
    <string name="demo_action_no_splash">No splash!</string>
    <string name="demo_showcase_header">Available splash screen types</string>
</resources>
